--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -43,6 +44,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
+        </activity>
+        <activity
+            android:name=".EditWallpaper"
+            android:label="@string/edit_wallpaper"
+            android:parentActivityName=".MyWallpaper">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MyWallpaper" />
         </activity>
     </application>
 
