--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BlueGrape">
         <service
-            android:name=".WallpaperService"
+            android:name=".AppListener"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
-
             <meta-data
                 android:name="android.accessibilityservice"
-                android:resource="@xml/accessibilityservice" />
+                android:resource="@xml/accessibility" />
+        </service>
+        <service
+            android:name=".WallpaperService"
+            android:enabled="true"
+            android:exported="true">
         </service>
 
         <activity
