--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEM"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,8 +18,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/bluegrape"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BlueGrape">
-        <activity android:name=".ApplyWallpaper" />
+        android:theme="@style/Theme.BlueGrape"
+        android:requestLegacyExternalStorage="true">
+        <activity android:name=".ApplyWallpaper"
+            android:requestLegacyExternalStorage="true"/>
 
         <service
             android:name=".AppListener"
@@ -40,7 +43,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:requestLegacyExternalStorage="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,7 +54,8 @@
         <activity
             android:name=".MyWallpaper"
             android:label="@string/my_wallpaper"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:requestLegacyExternalStorage="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
@@ -58,7 +63,8 @@
         <activity
             android:name=".CurrentWallpaper"
             android:label="@string/current_wallpaper"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:requestLegacyExternalStorage="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
@@ -66,7 +72,8 @@
         <activity
             android:name=".AboutThisSoftware"
             android:label="@string/about_this_software"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:requestLegacyExternalStorage="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
@@ -74,7 +81,8 @@
         <activity
             android:name=".EditWallpaper"
             android:label="@string/edit_wallpaper"
-            android:parentActivityName=".MyWallpaper">
+            android:parentActivityName=".MyWallpaper"
+            android:requestLegacyExternalStorage="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MyWallpaper" />
@@ -82,7 +90,8 @@
         <activity
             android:name=".RewardAndContribution"
             android:label="@string/reward_and_contribution"
-            android:parentActivityName=".AboutThisSoftware">
+            android:parentActivityName=".AboutThisSoftware"
+            android:requestLegacyExternalStorage="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".AboutThisSoftware"/>
