--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdkVersion 31
         versionCode 3
         versionName '1.0.3'
+        buildConfigField "String", "BUILD_TIME", getDate()
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -26,6 +27,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
@@ -36,4 +38,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+}
+
+static String getDate() {
+    Date date = new Date();
+    return "\""+date.format("yyyy-MM-dd HH:mm:ss", TimeZone.getTimeZone("GMT+8"))+" UTC+8\"";
 }
