--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEM"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEM" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
 
@@ -16,10 +16,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/bluegrape"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/bluegrape"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BlueGrape"
-        android:requestLegacyExternalStorage="true">
+        android:theme="@style/Theme.BlueGrape">
+        <activity
+            android:name=".EditVideoWallpaper"
+            android:exported="false" />
 
         <service
             android:name=".AppListener"
@@ -85,9 +88,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MyWallpaper" />
         </activity>
-        <activity android:name=".ApplyWallpaper"
-            android:requestLegacyExternalStorage="true"
-            android:parentActivityName=".EditWallpaper">
+        <activity
+            android:name=".ApplyWallpaper"
+            android:parentActivityName=".EditWallpaper"
+            android:requestLegacyExternalStorage="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".EditWallpaper" />
@@ -99,7 +103,7 @@
             android:requestLegacyExternalStorage="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".AboutThisSoftware"/>
+                android:value=".AboutThisSoftware" />
         </activity>
     </application>
 
