修复应用壁纸时可能出现的问题。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    compile 'com.warnyul.android.fast-video-view:fast-video-view:1.0.2'
+    implementation 'com.warnyul.android.fast-video-view:fast-video-view:1.0.2'
 }
 
 static String getDate() {
