重构大量代码，同时搞一下HTML壁纸。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:roundIcon="@mipmap/bluegrape"
         android:supportsRtl="true"
         android:theme="@style/Theme.BlueGrape">
+        <activity
+            android:name=".EditHtmlWallpaper"
+            android:exported="false" />
 
         <service
             android:name=".AppListener"
