--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         </service>
         <service
             android:name=".WallpaperService"
-            android:enabled="true"/>
+            android:enabled="true" />
 
         <activity
             android:name=".MainActivity"
@@ -118,6 +118,15 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".AboutThisSoftware" />
+        </activity>
+        <activity
+            android:name=".Settings"
+            android:label="@string/settings"
+            android:parentActivityName=".MainActivity"
+            android:requestLegacyExternalStorage="true">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
     </application>
 
