--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,15 @@ android {
         applicationId "dzj.cyrxdzj.bluegrape"
         minSdkVersion 16
         targetSdk 25
-        versionCode 10
-        versionName '1.1.0'
+        versionCode 11
+        versionName '1.1.1'
         buildConfigField "String", "BUILD_TIME", getDate()
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
     }
 
     buildTypes {
@@ -45,6 +49,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.warnyul.android.fast-video-view:fast-video-view:1.0.2'
     implementation 'com.blankj:utilcodex:1.31.0'
+    implementation 'com.tencent.bugly:crashreport:latest.release'
 }
 
 static String getDate() {
