--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "dzj.cyrxdzj.bluegrape"
         minSdkVersion 16
         targetSdk 25
-        versionCode 15
-        versionName '1.1.5'
+        versionCode 16
+        versionName '1.1.6'
         buildConfigField "String", "BUILD_TIME", getDate()
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -47,9 +47,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.warnyul.android.fast-video-view:fast-video-view:1.0.2'
-    implementation 'com.blankj:utilcodex:1.31.0'
+    implementation 'com.warnyul.android.fast-video-view:fast-video-view:latest.release'
+    implementation 'com.blankj:utilcodex:latest.release'
     implementation 'com.tencent.bugly:crashreport:latest.release'
+    implementation 'cat.ereza:customactivityoncrash:2.3.0'
 }
 
 static String getDate() {
